# Trau

./: .gitignore  CMakeLists.txt
src/: StringTheory.cpp
